# pointcloud-feature-extraction-demo

./: CMakeLists.txt  README.md  test.py
Kinematic_Calibration/: dh_calibration.m  eye_calibration.m  gen_eye_calibration_pose.m  get_calibrate_point_location.m  init_robot.m  myrobot.m
icp_matcher/: .gitignore  CMakeLists.txt  README.md
icp_matcher/src/: CMakeLists.txt  icp_matcher.cpp
model/: monkey.ply
pcl_test/: README.md  run.bash
pcl_test/include/: iterative_icp.h
pcl_test/src/: CMakeLists.txt  interactive_icp.cpp
ros_kortex/: note.md
target_ball_measure/: CMakeLists.txt  README.md  install.bash  run.bash
target_ball_measure/src/: CMakeLists.txt  target_ball_measure.cpp
weld_seam_measure/: CMakeLists.txt  README.md  run.bash
weld_seam_measure/include/: weldseam_measure.h
weld_seam_measure/src/: CMakeLists.txt  main_weldseam.cpp  weldseam_measure.cpp
work_piece_measure/: .gitignore  CMakeLists.txt  README.md  run.bash
work_piece_measure/include/: workpiece_measure.h
work_piece_measure/src/: CMakeLists.txt  main_workpiece.cpp  work_piece_measure.cpp  workpiece_measure.cpp
